--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                     <div class="row">
                         <div class="contact-left">
                             <h1 class="sub-titles">Contatct Me</h1>
-                            <p><i class="fa-solid fa-paper-plane"></i>mrankitmyadav@gmail.com</p>
-                            <p><i class="fa-sharp fa-solid fa-square-phone"></i>7710074194</p>
+                            <p><i class="fa-solid fa-paper-plane"></i>abcd@gmail.com</p>
+                            <p><i class="fa-sharp fa-solid fa-square-phone"></i>xxxxxxx5544</p>
                             <div class="social-icons">
                                 <a href=""></a><i class="fa-brands fa-facebook"></i></a>
                                 <a href=""></a><i class="fa-brands fa-twitter-square"></i></a>
