--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/Logo Mockup on panel wall1.png" class="logo">
+                <img src="Logo Mockup on panel wall1.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/newimg1.png"></img>
+                    <img src="newimg1.png"></img>
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-titles">About Me</h1>
@@ -116,7 +116,7 @@
             <h1 class="sub-titles">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/media1.png">
+                    <img src="media1.png">
                     <div class="layer">
                         <h3>Social Media App</h3>
                         <p>The app connecys you to the talendet people around the world.
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/music2.png">
+                    <img src="music2.png">
                     <div class="layer">
                         <h3>Music App</h3>
                         <p>The app connecys you to the talendet people around the world.
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/online-shop1.png">
+                    <img src="online-shop1.png">
                     <div class="layer">
                         <h3>Online Shoping App</h3>
                         <p>The app connecys you to the talendet people around the world.
@@ -161,7 +161,7 @@
                                 <a href=""></a><i class="fa-brands fa-instagram"></i></a>
                                 <a href=""></a><i class="fa-brands fa-linkedin"></i></a>
                             </div>
-                            <a href="images/mycv.docx" download class="btn btn2">Download CV</a>
+                            <a href="mycv.docx" download class="btn btn2">Download CV</a>
                         </div>
                         <div class="contact-right">
                             <form name="submit-to-google-sheet">
