--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2020</span><br>HSC From SS Vidyalya Mumbai</li>
-                            <li><span>2022</span><br>SSC From Vivek Vidyalya Mumbai</li>
+                            <li><span>2020</span><br>SSC From SS Vidyalya Mumbai</li>
+                            <li><span>2022</span><br>HSC From Vivek Vidyalya Mumbai</li>
                             <li><span>2024</span><br>Diploma in Advance Programing Tilak Maharastra Pune</li>
                         </ul>
                     </div>
