--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <!-- ----------------------About--------------------- -->
 
-    <div id="about">
+<!--     <div id="about">
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
@@ -76,9 +76,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- --------------------Services--------------------- -->
-    <div id="services">
+<!--     <div id="services">
         <div class="container">
             <h1 class="sub-titles"> My Services </h1>
             <div class="services-list">
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- --------------------Portfolio------------------- -->
 
     <div id="portfolio">
@@ -148,7 +148,7 @@
             </div>
             <a href="#" class="btn">See more</a>
             <!-- ----------------Contact--------------- -->
-            <div id="contact">
+<!--             <div id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="contact-left">
@@ -227,5 +227,4 @@
       </script>
 </body>
 
-</html>
- -->
+</html> -->
