--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div> -->
     <!-- --------------------Portfolio------------------- -->
 
-    <div id="portfolio">
+<!--     <div id="portfolio">
         <div class="container">
             <h1 class="sub-titles">My Work</h1>
             <div class="work-list">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a>
+            <a href="#" class="btn">See more</a> -->
             <!-- ----------------Contact--------------- -->
 <!--             <div id="contact">
                 <div class="container">
