--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -33,7 +33,7 @@
     </div>
     <!-- ----------------------About--------------------- -->
 
-<!--     <div id="about">
+    <div id="about">
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
@@ -76,9 +76,9 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div> 
     <!-- --------------------Services--------------------- -->
-<!--     <div id="services">
+   <div id="services">
         <div class="container">
             <h1 class="sub-titles"> My Services </h1>
             <div class="services-list">
@@ -108,10 +108,10 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div> 
     <!-- --------------------Portfolio------------------- -->
 
-<!--     <div id="portfolio">
+    <div id="portfolio">
         <div class="container">
             <h1 class="sub-titles">My Work</h1>
             <div class="work-list">
@@ -146,9 +146,9 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a> -->
+            <a href="#" class="btn">See more</a> 
             <!-- ----------------Contact--------------- -->
-<!--             <div id="contact">
+           <div id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="contact-left">
@@ -227,4 +227,4 @@
       </script>
 </body>
 
-</html> -->
+</html> 
